[project]
name = "tetsy-nanomsg"
version = "0.7.0"
authors = [
  "Daniel Fagnan <dnfagnan@gmail.com>",
  "Jason E. Aten",
  "David C. Bishop",
  "Dennis Lawler",
  "Zachary Tong",
  "Dan Burkert",
  "Benoît Labaere <benoit.labaere@gmail.com>",
  "Chip Collier"
]

description = "A high-level, Rust idiomatic wrapper around tetsy-nanomsg."
homepage = "https://github.com/tetcoin/tetsy-nanomsg"
documentation = "https://github.com/tetcoin/tetsy-nanomsg"
repository = "https://github.com/tetcoin/tetsy-nanomsg"
readme = "./README.md"
keywords = ["tetsy-nanomsg", "binding", "network", "pub", "sub"]
license = "MIT"

[features]
bundled = ["nanomsg-sys/bundled"]

[dependencies.nanomsg-sys]
path = "./tetsy-nanomsg-sys"
version = "0.7.0"

[dependencies]
libc = "0.2"
