[package]

name = "tetsy-nanomsg-sys"
version = "0.7.0"
authors = [
  "Daniel Fagnan <dnfagnan@gmail.com>",
  "Benoît Labaere <benoit.labaere@gmail.com>",
  "Chip Collier"
]

license = "MIT"
description = "The low-level bindings that is used by the tetsy-nanomsg library."
homepage = "https://github.com/tetcoin/tetsy-nanomsg"
documentation = "https://github.com/tetcoin/tetsy-nanomsg"
repository = "https://github.com/tetcoin/tetsy-nanomsg"
keywords = ["binding", "nanomsg"]
links = "nanomsg"
build = "build.rs"

[features]
bundled = []

[dependencies]
libc = "0.2.16"

[build-dependencies]
gcc = "0.3"


